# cert-framework

./: .dockerignore  .env  .env.example  .gitignore  ACTUAL_EXPERIMENT_RESULTS.md  ALTERNATIVE_README.md  API_REDESIGN_COMPLETE.md  BACKEND_IMPLEMENTATION_PLAN.md  BACKEND_QUICKSTART.md  BENCHMARK_VALIDATION_PLAN.md  BUILD-VERIFICATION.md  CERT_Complete_Validation.ipynb  CERT_Full_Validation.ipynb  CHANGELOG.md  CHANGELOG_v0.3.1.md  CLAUDE_CODE_INSTRUCTIONS.md  CLEANUP_SUMMARY.md  CLI_FIXES_COMPLETED.md  CODE_QUALITY_REPORT.md  COLAB_INSTRUCTIONS.md  CONFIG_UPDATE_SUMMARY.md  CONTRIBUTING.md  DASHBOARD_DESIGN_SPEC.md  DIAGNOSE_BUILD_ISSUE.md  Dockerfile  Dockerfile.api  EMBEDDINGS_REQUIRED_SUMMARY.md  EXECUTION_WORKAROUNDS.md  EXPERIMENT_REPORT.md  FIGMA_DESIGN_SETUP.md  FIGMA_PLUGIN_QUICKSTART.md  FIGMA_QUICK_CHECKLIST.md  FIGMA_SYNC_IMPLEMENTATION.md  FIGMA_SYNC_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FIX_PLAN.md  FLY_DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  (+64 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  connector_request.md
.github/workflows/: benchmark-validation.yml  build-package.yml  cert.yml  figma-sync.yml
backend/: Dockerfile  __init__.py  celery_app.py  config.py
backend/services/: __init__.py
beta_test/: SECOND_BETA_TEST_REPORT.md  UX_FEEDBACK_REPORT.md  cert_traces.jsonl  create_sample_pdf.py  extraction_agent_traces.jsonl  pdf_extraction_pipeline.py  pipeline_results.json  pipeline_test_mock.py  pipeline_traces.jsonl  report_agent_traces.jsonl  sample_financial_report.txt  sample_research_paper.txt
cert/: __init__.py  __init___v2.py  agent_monitor.py  audit.py  cli.py  compare.py  coordination.py  cost_decorator.py  cost_tracker.py  energy.py  fact_extractor.py  intelligent_comparator.py  measure.py  monitor.py  nli.py  presets.py  reports.py  runner.py
changes/: EXECUTIVE-SUMMARY.md  MIGRATION-INSTRUCTIONS.md  monitoring-dashboard.tsx  new-dashboard-layout.tsx  overview-dashboard.tsx  package.json  quick-setup.sh
dashboard/: .env.example  .env.local  .env.local.example  AUTOMATION_FEATURES.md  DEPLOYMENT.md  DEPLOYMENT_INFO.md  FIGMA_SYNC_QUICKSTART.md  FIGMA_SYNC_SETUP.md  INTEGRATION.md  README.md  REPORT_SETUP.md  package-lock.json  package.json  tailwind.config.ts
database/: README.md  schema.sql
deployments/: DEPLOYMENT_GUIDE.md  README.md
docs/: API_REFERENCE.md  CONNECTOR_DEVELOPMENT_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_IMPROVEMENT_PLAN.md  EU_AI_ACT_MAPPING.md  HTML_PDF_REPORTING_GUIDE.md  PARAMETER_REFERENCE.md  PRESET_VALIDATION_ANALYSIS.md  PRESET_VALIDATION_METHODOLOGY.md  README.md  TEMPERATURE_GUIDE.md  TRAJECTORY_MONITORING_GUIDE.md  index.md  migration-v2-to-v3.md  package.json
examples/: 01_basic_measurement.py  01_basic_trace.py  01_chatbot_consistency.py  01_deduplication.py  01_quickstart.py  02_production_monitoring.py  02_rag_monitoring.py  02_rag_retrieval.py  03_compliance_workflow.py  03_model_comparison.py  03_model_regression.py  04_agentic_pipeline.py  04_compliance_reports.py  04_debugging_inspector.py  04_pytest_integration.py  05_real_llm_testing.py  05_trajectory_analysis.py  06_coordination_monitor.py  07_enhanced_presets.py  08_langchain_integration.py  09_llamaindex_integration.py  10_anthropic_integration.py  11_openai_integration.py  12_prometheus_monitoring.py  README.md  README.txt  assess_llm_providers.py  basic_usage_v3.py  benchmark_llm_providers.py  compliance_report_example.py  financial_rag_hallucination.py  trajectory_basic_example.py
experiments/: HOW_TO_GET_REAL_RESULTS.md  PRESET_UPDATES_TEMPLATE.py  README.md  VALIDATION_METHODOLOGY.md  VALIDATION_SUMMARY.md  diagnostic_test.py  preset_validation_study.py  run_minimal_validation.py  run_real_validation.py  run_simple_validation.py
figma-plugin/: README.md  code.js  manifest.json  ui.html
notebooks/: cert_authenticated_demo.ipynb  customer_support_chatbot.ipynb  insurance_claims_extraction.ipynb  legal_contract_analyzer.ipynb  multi_agent_document_extraction.ipynb  openllmetry_integration.ipynb
scripts/: generate_assessment_pdf.py  populate_templates.py  release.sh  test_optional_imports.py
templates/: README.md  anex_iv_template.docx  article_15_template.docx  conformity_declaration_template.docx  generate_templates.py  human_oversight_template.docx  risk_classification_template.docx
tests/: conftest.py  test_basic_functionality.py  test_compare_api.py  test_imports.py  test_intelligent_comparator.py  test_report_contract.py  test_smoke.py  test_trajectory_imports.py
validation_results/: VALIDATION_RESULTS_SUMMARY.md  demo_validation_results.json
(+408 files in other folders)
